kompose-manifests/prod-external-secrets/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -v -f docker-compose.yml -f docker-compose.prod.external-secrets.yml
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -v -f docker-compose.yml -f docker-compose.prod.external-secrets.yml
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/prod-esnet: "true"
        io.kompose.service: frontend
    spec:
      containers:
      - env:
        - name: PORT
          value: "8080"
        image: ezodude/frontend-cok8s:prod
        imagePullPolicy: ""
        name: frontend
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
