kompose-manifests/prod-external-secrets/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -v -f docker-compose.yml -f docker-compose.prod.external-secrets.yml
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 8080
  selector:
    io.kompose.service: frontend
  # type: LoadBalancer was added manually, otherwise the service was not connected to localhost (defaulted to ClusterIP).
  type: LoadBalancer
status:
  loadBalancer: {}
