kompose-manifests/prod-external-secrets/missing-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    io.kompose.service: backend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
