kompose-manifests/prod-external-secrets/prod-esnet-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: prod-esnet
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/prod-esnet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/prod-esnet: "true"
